# veriDP

./: .gitignore  CMakeLists.txt  README.md  SeedCommitter.hpp  box_muller_circuits.h  cifar10_dataset.h  cifar_cnn.h  dataset_commitment.cpp  dataset_commitment.h  dp_sgd_libtorch.h  linear_regression.h  logistic_regression.h  mnist_cnn.h  privacy_accountant.h  resnet18.h  run_benchmark.sh  run_benchmark_cifar_resnet.sh  run_full_benchmark.sh  run_full_benchmark_cifar_resnet.sh  run_linear_logistic_grid.sh  run_parameter_sweep.sh  run_parameter_sweep_cifar_resnet.sh  simple_mlp.h  synthetic_linear_dataset.h  synthetic_logistic_dataset.h  train.cpp  train_veridp.cpp  veridp_benchmark_results.csv  veridp_cifar10_resnet_benchmark_results.csv  veridp_forward_backward.h  veridp_linear_logistic_grid_results.csv  veridp_metrics.h  veridp_parameter_sweep.csv  veridp_proofs.h  veridp_utils.h
Summer code/: GKR.cpp  GKR.h  bench.hpp  config_pc.hpp  constants.h  expander.cpp  expanders.h  fieldElement.cpp  fieldElement.hpp  fieldElement256.cpp  fieldElement256.hpp  field_arithmetic.cpp  field_arithmetic.h  field_arithmetic_impl.h  finalise_proof.cpp  finalise_proof.h  flo-shani.c  flo-shani.h  ivc_adapter.cpp  ivc_adapter.h  linear_code_encode.cpp  linear_code_encode.h  merkle_tree.cpp  merkle_tree.h  mimc.cpp  mimc.h  my_hhash.h  parameter.h  pol_verifier.cpp  pol_verifier.h  poly_commit.cpp  poly_commit.h  proof_serialization.cpp  proof_serialization.h  proof_utils.cpp  proof_utils.h  prove_leaf.cpp  prove_leaf.h  quantization.cpp  quantization.h  (+6 more)
benchmark_results/: batch_scaling_cnn_20251128_232501.csv  batch_scaling_mlp_20251128_232501.csv  cifar10_resnet_clip_norm_sweep_20260209_145243.csv  cifar10_resnet_clip_norm_sweep_20260211_023246.csv  cifar10_resnet_lr_sweep_20260209_145243.csv  cifar10_resnet_noise_mult_sweep_20260209_145243.csv  clip_norm_sweep_20251128_232501.csv  cnn_vs_mlp_20251128_232501.csv  noise_mult_sweep_20251128_232501.csv
